# detect-speech

./: CMakeLists.txt  Makefile  detect-speech.cpp  detect-speech.py  trim-and-replace.sh
src/: ffmpeg-transcode.cpp
